# googletranslaterunner

./: CMakeLists.txt  Changelog  googletranslate.cpp  googletranslate.h  googletranslate_config.cpp  googletranslate_config.h  googletranslate_config.ui  googletranslatehttp.cpp  googletranslatehttp.h  googletranslateutil.cpp  googletranslateutil.h  plasma-runner-googletranslate.desktop  plasma-runner-googletranslate_config.desktop
